# research-signal-nlp

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/: backtest_cs.yaml  backtest_event.yaml  data_source.yaml  report.yaml  signal_build.yaml
docs/: architecture-design.md  case-study-01.md  development-plan.md  implementation-status.md  interview-highlights.md  product-requirements.md  testing-regression-policy.md
examples/: demo_run.sh
examples/data/: label_sample.csv  returns_sample.csv  text_sample.csv
src/research_signal_nlp/: __init__.py  __main__.py  cli.py
src/research_signal_nlp/backtest/: base.py  cross_section.py  event_study.py
src/research_signal_nlp/core/: config.py  regression.py  services.py
src/research_signal_nlp/data/: ingest.py  schema.py
src/research_signal_nlp/gui/: app.py  worker.py
src/research_signal_nlp/models/: base.py  tfidf_linear.py
src/research_signal_nlp/reporting/: charts.py  report.py
src/research_signal_nlp/signals/: base.py  events.py  lexicon.py  pipeline.py
tests/: conftest.py
tests/baseline/: cs_metrics_baseline.json
tests/e2e/: test_cli_e2e.py
tests/integration/: test_gui_regression.py  test_pipeline_flow.py
tests/unit/: test_backtest_metrics.py  test_gui_worker.py  test_ingest_timezone.py  test_io_utils.py  test_lexicon_events.py  test_regression_gate.py  test_report_strict_inputs.py  test_services.py  test_signal_pipeline_contract.py  test_text_utils.py
(+2 files in other folders)
